fixed misalignment

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ div{
     margin: 0 auto;
 }
 #searchContainer{
-    width: 1920px;
+    width: 100%;
     height: 200px;
     padding-bottom: 100px;
 }
